Fixes testimonials Dark Mode color bug #583

--- a/assets/css/testimonials.css
+++ b/assets/css/testimonials.css
@@ -50,6 +50,7 @@ em.testimonial-text {
 h3.testimonial-text {
   margin-top: 10px;
   text-align: left;
+  color: #020100;
 }
 
 .testimonial-text span {
